[package]
name = "wgpu-hello"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies] 
env_logger = "0.10.0"
pollster = "0.3.0"
wgpu = "0.16.0"
winit = "0.28.3"

[target.'cfg(target_arch = "wasm32")'.dependencies] 
web-sys = "0.3.61"
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
wasm-bindgen-futures = "0.4.34" 
wasm-bindgen = "0.2.84"

[profile.release]
opt-level = 'z'     # Optimize for size
lto = true          # Enable link-time optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations
panic = 'abort'     # Abort on panic
strip = true        # Strip symbols from binary*

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/main.rs"
